make Java 11 compatible